--- a/android.html
+++ b/android.html
@@ -6,19 +6,18 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <title>História do Mascote do Android</title>
+    <style></style>
 </head>
 <body>
     <header>
-        <h1>Curiosidades de Tecnologia
+        <h1 id="cabeca">Curiosidades de Tecnologia
         </h1>
-        <h2>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</h2>
+        <p id="sub">Tudo aquilo que você sempre quis saber sobre o mundo <br> Tech, em um único lugar</p>
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Notícias</a></li>
-                <li><a href="#">Curiosidades</a></li>
-                <li><a href="#">Fale Conosco</a></li>
-            </ul>
+            <a href="#">Home</a>
+            <a href="#">Notícias</a>
+            <a href="#">Curiosidades</a>
+            <a href="#">Fale Conosco</a>
         </nav>
     </header>
 
@@ -28,30 +27,30 @@
         </section>
         <section id="noticia">
             <article>
-                <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
+                <p>Provavelmente você sabe que o sistema operacional <span>Android</span>, mantido pelo <span>Google</span> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
                 </p>
-                <h2>A primeira versão</h2>
-                <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://www.linkedin.com/in/morrildl/">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+                <h2 id="assunto" class="topico">A primeira versão</h2>
+                <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://www.linkedin.com/in/morrildl/" target="_blank" rel="external">Dan Morrill</a> &#x1F517;. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" rel="external">Inkscape</a> &#x1F517; (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
                 <picture>
                     <source media="(max-width: 750px)" srcset="imagens/dan-droids-pq.png" type="image/jpg">
                     <source media="(max-width: 1050px)" srcset="imagens/dan-droids.png" type="image/jpg">
                     <img src="imagens/dan-droids.png" alt="Imagem flexível">
                 </picture>
-                <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
+                <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <span>Dandroids</span>.</p>
             </article>
         </section>
         <section id="assunto">
-            <h2>Surge um novo mascote</h2>
+            <h2 id="assunto" class="topico">Surge um novo mascote</h2>
         </section>
         <section id="noticia">
             <article>
-                <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+                <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com">Irina Blok</a> &#x1F517;, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
                 <picture>
                     <source media="(max-width: 750px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
                     <source media="(max-width: 1050px)" srcset="imagens/irina-blok.jpg" type="image/jpg">
                     <img src="imagens/irina-blok.jpg" alt="Imagem flexível">
                 </picture>
-                <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
+                <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <span>Bugdroid</span>, o novo mascote do Android.</p>
                 <img src="imagens/bugdroid.png" alt="">
                 <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
             </article>
@@ -62,9 +61,9 @@
 
         <section>
             <section id="bonus">
-                <h3>Quer aprender mais?</h3>
+                <h3>Quer aprender mais?</h3> 
                 <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
-                <ul>
+                <ul> 
                     <li>1.5 - <a href="#">Cupcake</a></li>
                     <li>1.6 - <a href="#">Donut</a></li>
                     <li>3.0 - <a href="#">Eclair</a></li>
@@ -81,15 +80,13 @@
                     <li>9.0 - <a href="#">Pie</a></li>
                 </ul>
                 <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
-                <br>
-                <p>Acesse aqui o site <a href="https://www.android.com/intl/pt_pt/history/">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                <p>Acesse aqui o site <a href="https://www.android.com/intl/pt_pt/history/" target="_blank" rel="external">Android History</a> &#x1F517; para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
             </section>
-            <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
+            <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <span>Android</span> e seu simpático mascote.</p>
         </section>
-        <footer>
-            <p>Site criado por Gustavo Guanabara para o CursoemVideo.</p>
-        </footer>
-
     </main>
+    <footer>
+        <p>Site criado por <strong>Gustavo Guanabara</strong> para o <strong>CursoemVideo.</strong></p>
+    </footer>
 </body>
 </html>
