--- a/android.html
+++ b/android.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo/style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <title>História do Mascote do Android</title>
     <style></style>
@@ -13,13 +13,13 @@
         <h1 id="cabeca">Curiosidades de Tecnologia
         </h1>
         <p id="sub">Tudo aquilo que você sempre quis saber sobre o mundo <br> Tech, em um único lugar</p>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Notícias</a>
-            <a href="#">Curiosidades</a>
-            <a href="#">Fale Conosco</a>
-        </nav>
     </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Notícias</a>
+        <a href="#">Curiosidades</a>
+        <a href="#">Fale Conosco</a>
+    </nav>
 
     <main>
         <section id="assunto">
@@ -60,7 +60,7 @@
         </section>
 
         <section>
-            <section id="bonus">
+            <aside id="bonus">
                 <h3>Quer aprender mais?</h3> 
                 <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
                 <ul> 
@@ -81,7 +81,7 @@
                 </ul>
                 <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
                 <p>Acesse aqui o site <a href="https://www.android.com/intl/pt_pt/history/" target="_blank" rel="external">Android History</a> &#x1F517; para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
-            </section>
+            </aside>
             <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <span>Android</span> e seu simpático mascote.</p>
         </section>
     </main>
