--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </p>
                     <h2>A primeira versão</h2>
 
-                    <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" rel="external">Dan Morrill</a> &#x1F517;. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" rel="external">Inkscape</a> &#x1F517; (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+                    <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a class="externo" href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" rel="external">Dan Morrill</a>. Ele conta que abriu o <a class="externo" href="https://inkscape.org/pt-br/" target="_blank" rel="external">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
                     <picture>
                         <source media="(max-width: 670px)" srcset="imagens/dan-droids-pq.png">
@@ -41,7 +41,7 @@
                 <h2>Surge um novo mascote</h2>
 
                     <p>
-                        A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com" target="_blank" rel="external">Irina Blok</a> &#x1F517;, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
+                        A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a class="externo" href="https://www.irinablok.com" target="_blank" rel="external">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
                     </p>
 
                     <picture>
@@ -59,9 +59,9 @@
                         A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
                     </p>
 
-            <section class="video">
+            <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=FOWACUBbkUN2beRi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </section>
+            </div>
 
                 <aside id="bonus">
                     <h3>Quer aprender mais?</h3>
@@ -86,7 +86,7 @@
                         Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
 
                     <p>
-                        Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/#/donut" target="_blank" rel="external">Android History</a> &#x1F517; para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
+                        Acesse aqui o site <a class="externo" href="https://www.android.com/intl/en_uk/history/#/donut" target="_blank" rel="external">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
                     </p>
 
                    
